--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 .App {
   display: flex;
 }
@@ -8,15 +13,24 @@
   align-items: center;
   flex: 1 1;
 }
+.task-1 {
+  flex: 0.3 1;
+}
 .item-list {
   list-style: none;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 30px 80px 0 80px;
 }
 
 .list-item {
   display: flex;
-  flex-direction: column;
+  justify-content: flex-start;
   flex: 1 1;
+  height: 100px;
+  width: 100%;
 }
 
 .box {
@@ -26,14 +40,61 @@
   margin: 5px;
 }
 
-.initials {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin: 5px;
+.initials-box {
+  flex:0.0001 1;
+  padding-left: 25px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: 50px;
+  margin: 3px;
+  transition: flex 0.3s ease;
+
 }
 
+.initials {
+  opacity: 0;
+  padding-left: 15px;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding-left: 20px;
+}
+.application {
+  font-size: 14px;
+  color: 	#808080;
+  padding-top: 5px;
+  opacity: 0;
+}
+.steps {
+  opacity: 0;
+}
 .task-2 {
   background: black;
   color: white;
 }
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-30%, 0, 0);
+    }
+
+  30% {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+    }
+  }
+
+  .fadeInLeft {
+    animation: fadeInLeft .8s linear;
+    animation-fill-mode: forwards;
+  }
